# elpatcher

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  github-app-manifest.json  otchet.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.server
src/patcher/: __init__.py  __main__.py
src/patcher/agents/: __init__.py  base.py  code_agent.py  graph_agent.py  review_agent.py  tools.py
src/patcher/code/: __init__.py  analyzer.py  repo_map.py  search.py
src/patcher/github/: __init__.py  client.py  models.py
src/patcher/llm/: __init__.py  factory.py  provider.py  schemas.py
src/patcher/prompts/: __init__.py  code_generation.txt  code_review.txt  few_shots.py  issue_analysis.txt  templates.py
src/patcher/server/: __init__.py  api.py  app.py  config.py  github_app.py  main.py  onboarding.py  webhooks.py
src/patcher/server/templates/: elpatcher.yaml
src/patcher/state/: __init__.py  manager.py  models.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_code_agent.py  test_review_agent.py
tests/unit/: __init__.py  test_github_client.py  test_llm_providers.py  test_server.py  test_state_manager.py  test_tools.py
